Smoother animations, spacing fixes

--- a/CSS/application.css
+++ b/CSS/application.css
@@ -257,7 +257,7 @@ body h1 {
 .emailContainer {
 	background-color: #81955D;
 	width: 100%;
-	height: 70px;
+	height: 90px;
 }
 
 #pleasehireme {
@@ -272,12 +272,14 @@ body h1 {
 	text-align: center;
 	margin-bottom: 0;
 	font-size: 1.3em;
+	color:white;
 }
 
 .img-mail {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	padding-top: 10px;
 }
 .locationHeader {
 	font-family: "Arial Black", Gadget, sans-serif;
